# dxtr-cli

./: .gitignore  Makefile  README.md  dev_sglang.py  docker-compose.yaml  docker-compose.yml  get_daily_papers.py  litellm_config.yaml  pyproject.toml  start_server.py  start_sglang.py
docker/docling/: .dockerignore  Dockerfile  requirements.txt  server.py
dxtr/: CLAUDE.md  __init__.py  cli.py  config.py  config_v2.py  docling_utils.py  litellm_config.yaml  papers_etl.py  pyproject.toml  server.py  util.py
dxtr/agents/: __init__.py  base.py  master.py  system.md  tools.py  util.py  utils.py
dxtr/agents/deep_research/: agent.py
dxtr/agents/git_helper/: agent.py
dxtr/agents/github_summarize/: agent.py  system.md  util.py
dxtr/agents/main/: agent.py  system.md  util.py
dxtr/agents/papers_helper/: agent.py
dxtr/agents/papers_ranking/: __init__.py  agent.py  rank.md  score.md
dxtr/agents/profile_creator/: agent.py
dxtr/agents/profile_synthesize/: __init__.py  agent.py  system.md
dxtr/agents/subagents/: __init__.py  util.py
dxtr/base/: __init__.py  agent.py  prompts.py  tools.py
eval/: __init__.py  llm_as_a_judge.md
eval/deep_research/: __init__.py  agent.py  eval.py  eval_prompt.md  util.py
eval/e2e_journey/: run_eval.py
eval/papers_ranking/: __init__.py  eval.py  ground_truth_jan01.json
eval/papers_ranking/fixtures/: github_summary.json
eval/profile_creation/: __init__.py  agent.py  eval.py  profile_prompt.md  summary_prompt.md  util.py
tests/: README.md  conftest.py  test_base.py  test_llm_evaluation.py  test_tool_calling.py  utils.py
(+60 files in other folders)
