[project]
name = "dxtr-cli"
version = "0.1.0"
description = "A personalized ML research assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  # "huggingface-hub>=1.2.3",
  "requests>=2.32.5",
  "llama-index>=0.12.0",
  "docling>=2.66.0",
  "llama-index-embeddings-huggingface>=0.5.0",
  "einops>=0.8.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pytest-mock>=3.0.0"]

[project.scripts]
dxtr = "dxtr.cli:main"

[tool.setuptools]
packages = ["dxtr"]

[tool.setuptools.package-data]
dxtr = ["**/*.md"]
