[project]
name = "dxtr"
version = "0.1.0"
description = "Multi-agent research assistant"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
  "httpx>=0.25.0",
  "fastapi>=0.128.0",
  "uvicorn>=0.30.0",
  "pydantic-ai>=0.2.0",
  "litellm[proxy]>=1.80.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dxtr"]
